// ============================================================
// EkoService - Prisma Schema
// PostgreSQL 16 + Prisma ORM
// ============================================================

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// ──────────────────────────────────────────────────────────
// ENUMS
// ──────────────────────────────────────────────────────────

enum Role {
  ADMIN
}

enum StatusBooking {
  MENUNGGU
  SERVIS
  SELESAI
  DIBATALKAN
}

enum JenisTransaksi {
  MASUK
  KELUAR
}

enum KategoriLayanan {
  SERVICE_AC
  SERVICE_KULKAS
  SERVICE_MESIN_CUCI
  SERVICE_CHILLER
  SERVICE_SHOWCASE
  SERVICE_TV
}

enum KategoriSparepart {
  KULKAS
  AC
  MESIN_CUCI
  SHOWCASE
  TV
}

// ──────────────────────────────────────────────────────────
// USER (all roles)
// ──────────────────────────────────────────────────────────

model User {
  id         String   @id @default(uuid())
  nama       String
  username   String?  @unique
  password   String // hashed with argon2
  role       Role     @default(ADMIN)
  aktif      Boolean  @default(true)
  dibuatDi   DateTime @default(now())
  diupdateDi DateTime @updatedAt

  // Relations
  bookingsDibuat   Booking[]      @relation("BookingDibuatOleh")
  transaksisDibuat Transaksi[]    @relation("TransaksiDibuatOleh")
  sparepartsDibuat Sparepart[]    @relation("SparepartDibuatOleh")
  refreshTokens    RefreshToken[]

  @@index([username])
  @@index([role])
  @@index([aktif])
  @@map("users")
}

// ──────────────────────────────────────────────────────────
// BOOKING
// ──────────────────────────────────────────────────────────

model Booking {
  id         String @id @default(uuid())
  idTampilan String @unique // BK-XXXXXX format

  // Customer info
  namaPelanggan   String
  noTelpPelanggan String
  kategori        KategoriLayanan

  // Service info
  tglBooking DateTime

  // Status
  status       StatusBooking @default(MENUNGGU)
  dibuatOlehId String

  // Timestamps
  dibuatDi   DateTime @default(now())
  diupdateDi DateTime @updatedAt

  // Relations
  dibuatOleh User @relation("BookingDibuatOleh", fields: [dibuatOlehId], references: [id])

  @@index([idTampilan])
  @@index([status])
  @@index([dibuatOlehId])
  @@index([kategori])
  @@index([tglBooking])
  @@index([dibuatDi])
  @@map("bookings")
}

// ──────────────────────────────────────────────────────────
// TRANSAKSI (Keuangan)
// ──────────────────────────────────────────────────────────

model Transaksi {
  id         String @id @default(uuid())
  idTampilan String @unique // TX-XXXXXX format

  deskripsi    String
  jenis        JenisTransaksi
  nominal      Decimal        @db.Decimal(12, 0)
  dibuatOlehId String?

  // Timestamps
  dibuatDi   DateTime @default(now())
  diupdateDi DateTime @updatedAt

  // Relations
  dibuatOleh User? @relation("TransaksiDibuatOleh", fields: [dibuatOlehId], references: [id])

  @@index([idTampilan])
  @@index([jenis])
  @@index([dibuatOlehId])
  @@index([dibuatDi])
  @@map("transaksis")
}

// ──────────────────────────────────────────────────────────
// SPAREPART (Inventory)
// ──────────────────────────────────────────────────────────

model Sparepart {
  id         String @id @default(uuid())
  idTampilan String @unique // SP-XXXXXX format

  nama         String
  kategori     KategoriSparepart
  stok         Int               @default(0)
  satuan       String            @default("pcs")
  dibuatOlehId String?

  // Timestamps
  dibuatDi   DateTime @default(now())
  diupdateDi DateTime @updatedAt

  // Relations
  dibuatOleh User? @relation("SparepartDibuatOleh", fields: [dibuatOlehId], references: [id])

  @@index([idTampilan])
  @@index([kategori])
  @@index([dibuatOlehId])
  @@index([stok])
  @@map("spareparts")
}

// ──────────────────────────────────────────────────────────
// REFRESH TOKEN (hashed, stored in DB)
// ──────────────────────────────────────────────────────────

model RefreshToken {
  id         String   @id @default(uuid())
  tokenHash  String   @unique // hashed version of the token
  family     String // for rotation detection
  userId     String
  expiresDi  DateTime
  dibuatDi   DateTime @default(now())
  diupdateDi DateTime @updatedAt
  diRevoke   Boolean  @default(false)

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([tokenHash])
  @@index([userId])
  @@index([family])
  @@index([expiresDi])
  @@map("refresh_tokens")
}
