// EkoService - DB diagram untuk dbdiagram.io
// Sinkron dengan backend/src/prisma/schema.prisma
// Scope aplikasi: admin login, booking, keuangan, stok sparepart, refresh token.

Project ekoservice {
  database_type: "PostgreSQL"
}

Enum Role {
  ADMIN
}

Enum StatusBooking {
  MENUNGGU
  SERVIS
  SELESAI
  DIBATALKAN
}

Enum JenisTransaksi {
  MASUK
  KELUAR
}

Enum KategoriLayanan {
  SERVICE_AC
  SERVICE_KULKAS
  SERVICE_MESIN_CUCI
  SERVICE_CHILLER
  SERVICE_SHOWCASE
  SERVICE_TV
}

Enum KategoriSparepart {
  KULKAS
  AC
  MESIN_CUCI
  SHOWCASE
  TV
}

Table users {
  id varchar [pk]
  nama varchar [not null]
  username varchar [unique]
  password varchar [not null, note: "Hash argon2"]
  role Role [not null, default: "ADMIN"]
  aktif boolean [not null, default: true]
  dibuatDi timestamp [not null, default: `now()`]
  diupdateDi timestamp [not null]

  indexes {
    username
    role
    aktif
  }
}

Table bookings {
  id varchar [pk]
  idTampilan varchar [not null, unique, note: "Format BK-XXXXXX"]
  namaPelanggan varchar [not null]
  noTelpPelanggan varchar [not null]
  kategori KategoriLayanan [not null]
  tglBooking timestamp [not null]
  status StatusBooking [not null, default: "MENUNGGU"]
  dibuatOlehId varchar [not null]
  dibuatDi timestamp [not null, default: `now()`]
  diupdateDi timestamp [not null]

  indexes {
    idTampilan
    status
    dibuatOlehId
    kategori
    tglBooking
    dibuatDi
  }
}

Table transaksis {
  id varchar [pk]
  idTampilan varchar [not null, unique, note: "Format TX-XXXXXX"]
  deskripsi varchar [not null]
  jenis JenisTransaksi [not null]
  nominal decimal(12,0) [not null]
  dibuatOlehId varchar
  dibuatDi timestamp [not null, default: `now()`]
  diupdateDi timestamp [not null]

  indexes {
    idTampilan
    jenis
    dibuatOlehId
    dibuatDi
  }
}

Table spareparts {
  id varchar [pk]
  idTampilan varchar [not null, unique, note: "Format SP-XXXXXX"]
  nama varchar [not null]
  kategori KategoriSparepart [not null]
  stok int [not null, default: 0]
  satuan varchar [not null, default: "pcs"]
  dibuatOlehId varchar
  dibuatDi timestamp [not null, default: `now()`]
  diupdateDi timestamp [not null]

  indexes {
    idTampilan
    kategori
    dibuatOlehId
    stok
  }
}

Table refresh_tokens {
  id varchar [pk]
  tokenHash varchar [not null, unique, note: "Hash refresh token"]
  family varchar [not null, note: "Untuk deteksi rotasi token"]
  userId varchar [not null]
  expiresDi timestamp [not null]
  dibuatDi timestamp [not null, default: `now()`]
  diupdateDi timestamp [not null]
  diRevoke boolean [not null, default: false]

  indexes {
    tokenHash
    userId
    family
    expiresDi
  }
}

Ref: bookings.dibuatOlehId > users.id
Ref: transaksis.dibuatOlehId > users.id
Ref: spareparts.dibuatOlehId > users.id
Ref: refresh_tokens.userId > users.id [delete: cascade]
